Overflow fix, data added

--- a/project/frontend/src/assets/styles/CourseIntro.css
+++ b/project/frontend/src/assets/styles/CourseIntro.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
+    min-height: calc(100vh - 70px);
     background: #34495e;
     color: #FFFFFF;
     text-align: center;
