--- a/project/frontend/src/assets/styles/CreateCourse.css
+++ b/project/frontend/src/assets/styles/CreateCourse.css
@@ -10,7 +10,7 @@
 .create-course-view {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: calc(100vh - 70px);
     display: flex;
     align-items: center;
     justify-content: center;
