--- a/project/frontend/src/assets/styles/DisplayName.css
+++ b/project/frontend/src/assets/styles/DisplayName.css
@@ -4,7 +4,7 @@
 .display-name {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: calc(100vh - 300px);
     display: flex;
     align-items: center;
     justify-content: center;
