--- a/project/frontend/src/assets/styles/Login.css
+++ b/project/frontend/src/assets/styles/Login.css
@@ -9,7 +9,7 @@ body, input, button, label {
 .login {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: calc(100vh - 200px);
     display: flex;
     align-items: center;
     justify-content: center;
