--- a/project/frontend/src/assets/styles/Post.css
+++ b/project/frontend/src/assets/styles/Post.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  padding: 20px;
   margin: 0 auto;
+  padding-top: 20px;
+  padding-bottom: 20px;
   margin-left: 321px;
   box-sizing: border-box;
 }
