--- a/project/frontend/src/assets/styles/Topic.css
+++ b/project/frontend/src/assets/styles/Topic.css
@@ -1,5 +1,4 @@
 .topic-title {
-  padding-top: 70px;
   margin-left: 321px;
   font-family: 'Azonix', sans-serif;
   font-size: 40px;
